--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "deploy": "next build && next export && touch out/.nojekyll"
+    "export": "next export"
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0",
